# src/routes/categories.routes.ts
@@ -1,24 +1,26 @@
 import { Router } from "express";
 import multer from "multer";
 
-import createCategoriesController from "../modules/cars/useCases/createCategory";
-import importCategoriesController from "../modules/cars/useCases/importCategories";
-import listCategoriesController from "../modules/cars/useCases/listCategories";
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController";
+import { ImportCategoriesController } from "../modules/cars/useCases/importCategories/ImportCategoriesController";
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController";
 
 const categoriesRoutes = Router();
 
 const upload = multer({ dest: "./tmp" });
 
-categoriesRoutes.post("/", (request, response) =>
-  createCategoriesController().handle(request, response)
-);
+const createCategoryController = new CreateCategoryController();
+const listCategoriesController = new ListCategoriesController();
+const importCategoriesController = new ImportCategoriesController();
 
-categoriesRoutes.get("/", (request, response) =>
-  listCategoriesController().handle(request, response)
-);
+categoriesRoutes.post("/", createCategoryController.handle);
 
-categoriesRoutes.post("/import", upload.single("file"), (request, response) =>
-  importCategoriesController().handle(request, response)
+categoriesRoutes.get("/", listCategoriesController.handle);
+
+categoriesRoutes.post(
+  "/import",
+  upload.single("file"),
+  importCategoriesController.handle
 );
 
 export { categoriesRoutes };
